# robotics-project

./: README.md
gazebo_pallet_jack/: .gitignore  CMakeLists.txt  README.md  package.xml  pallet_jack.sdf
gazebo_pallet_jack/200k_box/: model.config  model.sdf
gazebo_pallet_jack/launch/: pallet.launch
gazebo_pallet_jack/worlds/: pallet_jack_world.world
ros-gps-plugin/: .gitignore  model.config  ros-gps-plugin.kdev4
ros-gps-plugin/doc/: ros-gps-plugin-doc.lyx
ros-gps-plugin/faultygps/: FaultyGPSPlugin.cc  FaultyGPSPlugin.hh
ros-navigation/doc/: ros-navigation.lyx
ros-navigation/willy3_2dnav/: package.xml
ros-navigation/willy3_2dnav/robot_conf/models/willy3/: model.config
ros_turtlebot_pilot/: README.md  package.xml
ros_turtlebot_pilot/src/: controller.cpp  mux.h
turtlesim_actionlib/: package.xml
turtlesim_actionlib/src/: client.h
